# hwpe_nvdla

./: .gitignore  .gitmodules  Bender.yml  Dockerfile  Makefile  README.md  check_dependencies.sh  docker-compose.yml  gen_verilator_dependencies.sh  src_files.yml  update_ips.py  verilator_setup.sh
hw/: Bender.yml  Makefile  check_dependencies.sh  compose.yml  ips_list.yml  src_files.yml  verilator_nv_small_setup.sh  verilator_setup.sh
hw/intf/: hwpe_ctrl_intf_periph.sv  nvdla_dbb_intf.sv
hw/src/: periph_to_csb_wip.sv
hw/test/pulprt/: Makefile  README.md  trace_test_to_c.py
hw/test/pulprt/include/: .gitignore  nvdla.h
hw/test/pulprt/single_trace/: Makefile  run_questa_tests.py
hw/test/pulprt/single_trace/test_lists/: failed_tests.txt
hw/test/pulprt/write_reg/: Makefile
hw/test/pulprt/write_reg_poll_read/: Makefile  write_reg.c
hw/test/questa/: run_questa_tests.py
hw/test/src/: csb_slave.sv  csb_slave_with_intf.sv  periph_to_csb_wrapper.sv  tb_periph_to_csb.sv
hw/test/verilator/: .gitignore  CMakeLists.txt  Makefile
hw/test/verilator/common/: FabricController.cpp  FabricController.h  Interruptable.h  Memory.h  MemoryController.h  RandomUtil.h  Util.h
hw/test/verilator/common/cc/: AxiMemoryController.cpp  Connections.h  PeriphController.cpp  TcdmMemoryController.cpp  TcdmMemoryController.h
hw/test/verilator/common/sc/: CsbSlave.cpp  CsbSlave.h  SignalConverter.h
hw/test/verilator/cpp_tests/: mem_test.cpp
hw/test/verilator/periph_to_csb/: sim_periph_to_csb.cpp
hw/test/verilator/tb_hwpe_nvdla/: CMakeLists.txt  sim_hwpe_nvdla.cpp
hw/test/verilator/tb_periph_to_nvdla/: sim_periph_to_nvdla.cpp
hw/test/verilator/trace_test/: run_verilator_tests.py
intf/: nvdla_csb_intf.sv  nvdla_dbb_intf.sv
renode/: Makefile
renode/apps/core-v-mcu/nvdla_test/: .gitignore  Makefile  commands.gdb  crt0.S  nvdla.repl  nvdla_test.c  nvdla_test.resc
renode/peripherals/: Makefile
renode/peripherals/nvdla/: CMakeLists.txt
src/: hwpe_nvdla.sv  nvdla.sv  periph_to_csb.sv  skid_buffer.sv
sw/: .clang-format  CMakeLists.txt  Makefile
sw/firmware/: CMakeLists.txt  conv.c
sw/firmware/include/: common.h  conv.h  dla_err.h  opendla.h
test/formal/: periph_to_csb_wrapper.sby
test/pulprt/nvdla/: Makefile
test/pulprt/nvdla/include/: nvdla_trace_tests.h
test/pulprt/nvdla/single_trace/: Makefile  single_trace.c
test/pulprt/nvdla/single_trace/test_lists/: short_tests.txt  tests_that_dont_hang.txt
test/pulprt/nvdla/write_reg/: Makefile  write_reg.c
test/pulprt/nvdla/write_reg_poll_read/: Makefile
test/questa/: run_questa_tests.py
test/src/: tb_hwpe_nvdla.sv  tb_periph_to_nvdla.sv  tb_tcdm_to_axi2mem_nvdla.sv
test/verilator/: .gitignore  Makefile  README.md  common_vars.cmake  hwpe_nvdla.cmake
test/verilator/common/: CSBMaster.cpp  ControlInterface.h  ControlOperation.h  FabricController.cpp  FabricController.h  Interruptable.cpp  Interruptable.h  Memory.cpp  Memory.h  MemoryController.h  PeriphOp.h  TraceLoader.cpp  TraceLoader.h  Util.h
test/verilator/common/cc/: AXIResponder.cpp  AXIResponder.h  AxiMemoryController.cpp  AxiMemoryController.h  CSBMaster.h  CsbSlave.h  PeriphControl.cpp  PeriphControl.h  PeriphController.cpp  PeriphController.h  PeriphMaster.h  TcdmMemoryController.cpp  TcdmMemoryController.h  TraceLoader.cpp  TraceLoader.h
test/verilator/common/sc/: PeriphMaster.h  StallGen.h  Stallable.h
test/verilator/cpp_tests/: CMakeLists.txt  mem_test.cpp
test/verilator/debug/: CMakeLists.txt  mem_test.cpp
test/verilator/periph_to_csb/: CMakeLists.txt
test/verilator/tb_hwpe_nvdla/: CMakeLists.txt  sim_hwpe_nvdla.cpp  verilator_nv_small.f
test/verilator/tb_periph_to_csb/: CMakeLists.txt  sim_tb_periph_to_csb.cpp
test/verilator/tb_periph_to_nvdla/: CMakeLists.txt  sim_periph_to_nvdla.cpp
test/verilator/trace_test/: run_verilator_tests.py  trace.vcd
test/verilator/trace_test/test_lists/: basic_test.txt
